@@ -61,7 +61,9 @@ if (isset($_REQUEST['cancel'])) {
 	ob_end_clean();
 
 	if (in_array($_REQUEST['backurl'], array('tr_events.php', 'events.php'))) {
-		redirect($_REQUEST['backurl'].'?eventid='.$_REQUEST['eventid'].'&triggerid='.$_REQUEST['triggerid']);
+		redirect($_REQUEST['backurl'].'?eventid='.$_REQUEST['eventid'].'&triggerid='.$_REQUEST['triggerid'].
+			'&source='.EVENT_SOURCE_TRIGGERS
+		);
 	}
 	elseif ($_REQUEST['backurl'] == 'screenedit.php') {
 		redirect($_REQUEST['backurl'].'?screenid='.$_REQUEST['screenid']);
@@ -169,7 +171,9 @@ if (isset($_REQUEST['save']) || isset($_REQUEST['saveandreturn'])) {
 		ob_end_clean();
 
 		if (in_array($_REQUEST['backurl'], array('tr_events.php', 'events.php'))) {
-			redirect($_REQUEST['backurl'].'?eventid='.$_REQUEST['eventid'].'&triggerid='.$_REQUEST['triggerid']);
+			redirect($_REQUEST['backurl'].'?eventid='.$_REQUEST['eventid'].'&triggerid='.$_REQUEST['triggerid'].
+				'&source='.EVENT_SOURCE_TRIGGERS
+			);
 		}
 		elseif ($_REQUEST['backurl'] == 'screenedit.php') {
 			redirect($_REQUEST['backurl'].'?screenid='.$_REQUEST['screenid']);
@@ -239,6 +243,7 @@ $messageTable->addVar('backurl', $_REQUEST['backurl']);
 if (in_array($_REQUEST['backurl'], array('tr_events.php', 'events.php'))) {
 	$messageTable->addVar('eventid', $_REQUEST['eventid']);
 	$messageTable->addVar('triggerid', $_REQUEST['triggerid']);
+	$messageTable->addVar('source', EVENT_SOURCE_TRIGGERS);
 }
 elseif (in_array($_REQUEST['backurl'], array('screenedit.php', 'screens.php'))) {
 	$messageTable->addVar('screenid', $_REQUEST['screenid']);
