@@ -79,6 +79,7 @@ New features:
 ........S. [ZBX-7555] removed "select" statement from the history cache; increased the cache performance (Sasha)
 
 Bug fixes:
+..F....... [ZBX-7630] fixed monitoring event page navigation (Eduard)
 .......PS. [ZBX-7990] fixed marking of unavailable agents; it could cause excess unilization of "poller" processes (Sasha)
 ....I..... [ZBX-7837] fixed y axis configuration in default proxy template graph (Sasha)
 ..F....... [ZBX-7957] improved graph Y axis min/max value validation for line and stacked graphs (Ivo)
